# dotenv-struct

./: .env  Cargo.toml
src/: lib.rs
tests/: mod.rs
